2003-04-23  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Check for rc == ERANGE,
	not rc == errno.  Use extend_alloca.

	* elf/tst-tls12.c (main): Fix declaration.
	* elf/tst-tls10.c (dummy): Make hidden instead of static.
	* elf/tst-tlsmod7.c (dummy): Likewise.
	* elf/tst-tlsmod8.c (dummy): Likewise.
	* elf/tst-tlsmod9.c (dummy): Likewise.

2003-04-22  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/not-cancel.h: Put parens around macro args.
	(open_not_cancel): Make last argument non-optional.
	* sysdeps/generic/check_fds.c (check_one_fd): Update caller.
	* sysdeps/unix/sysv/linux/gethostid.c (gethostid): Likewise.
	* iconv/gconv_cache.c (__gconv_load_cache): Likewise.

	* include/tls.h: Protect against multiple inclusion.

2003-04-22  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd-client.h: Add declaration for __nscd_open_socket.
	* nscd/nscd_gethst_r.c (__nscd_open_socket): Renamed from
	open_socket.  Not static anymore.
	(nscd_gethst_r): Use __nscd_open_socket.
	* nscd/nscd_getgr_r.c (open_socket): Removed.
	(nscd_getgr_r): Use __nscd_open_socket.
	* nscd/nscd_getpw_r.c (open_socket): Removed.
	(nscd_getpw_r): Use __nscd_open_socket.

	* nscd/nscd.c (main): Change type of fdn to long int and use strtol.
	* nscd/connections.c (handle_request): Add cast to avoid warning.

2003-04-21  Ulrich Drepper  <drepper@redhat.com>

	* signal/sigfillset.c: Moved to...
	* sysdeps/generic/sigfillset.c: ...here.  If SIGCANCEL is defined
	do not set the corresponding bit.

	* sysdeps/unix/sysv/linux/sigprocmask.c: Prevent changing mask for
	SIGCANCEL.
	* sysdeps/unix/sysv/linux/alpha/bits/siginfo.h: Define SI_TKILL.
	* sysdeps/unix/sysv/linux/bits/siginfo.h: Define SI_TKILL.
	* sysdeps/unix/sysv/linux/ia64/bits/siginfo.h: Define SI_TKILL.
	* sysdeps/unix/sysv/linux/s390/bits/siginfo.h: Define SI_TKILL.
	* sysdeps/unix/sysv/linux/sparc/bits/siginfo.h: Define SI_TKILL.

2003-04-20  Ulrich Drepper  <drepper@redhat.com>
