@@ -1,3 +1,11 @@
+2003-04-23  Ulrich Drepper  <drepper@redhat.com>
+
+	* grp/initgroups.c (getgrouplist): Don't copy too much into the
+	user buffer if more groups are found than fit into it.
+
+	* nis/nss_nis/nis-initgroups.c (_nss_nis_initgroups_dyn): Use
+	extend_alloca.
+
 2003-04-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/posix/getaddrinfo.c (gaih_inet): Check for rc == ERANGE,
